# float2half_test

./: CMakeLists.txt  README.md  build.bat  build.sh  float2half.c  graph.py  half2float.c  imath_half.h  platform_info.h
.github/workflows/: build.yml
cpython/: cpython.c
hardware/: hardware.c
imath/: imath.c  imath.h
maratyszcza_sse2/: maratyszcza_sse2.c
no_table/: no_table.h
numpy/: numpy.c
ryg/: ryg.c  ryg.h
scripts/: graph.py
src/: CMakeLists.txt  common.c  common.h  float2half.c  half2float.c  half2float_table.h  platform_info.c  platform_info.h  x86_cpu_info.c
src/cpython/: cpython.h
src/hardware/: hardware.c  hardware.h
src/imath/: imath.c  imath.h  imath_half.h
src/maratyszcza/: maratyszcza.c  maratyszcza.h
src/maratyszcza_nanfix/: maratyszcza_nanfix.c  maratyszcza_nanfix.h
src/maratyszcza_sse2/: maratyszcza_sse2.c  maratyszcza_sse2.h
src/no_table/: no_table.c
src/numpy/: numpy.h
src/ryg/: ryg.c  ryg.h
src/ryg_sse2/: ryg_sse2.c  ryg_sse2.h
src/table/: table.c  table.h
src/table_round/: table_round.h
src/tursa/: tursa.c
table/: table.c
table_round/: table_round.c
tursa/: tursa.c  tursa.h
